--- a/test-segundo-problema/pom.xml
+++ b/test-segundo-problema/pom.xml
@@ -5,20 +5,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>test.iso.b05</groupId>
-  <artifactId>test-primer-problema</artifactId>
+  <artifactId>test-segundo-problema</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>jar</packaging>
 
-  <name>test-primer-problema</name>
-  <url>http://github.com/RedBed24/ISO2-2023-B05-Testing-P1</url>
+  <name>test-segundo-problema</name>
+  <url>https://github.com/DanielAyusoDelCampo/ISO2-2023-B05-Testing-P2</url>
 
   <developers>
     <developer>
-      <name>Samuel Espejo Gil</name>
+      <name>Daniel Ayuso Del Campo</name>
     </developer>
     <developer>
-      <name>Noelia Díaz-Alejo Alejo</name>
+      <name>Antonio Campallo Gómez</name>
     </developer>
   </developers>
 
